@@ -1,6 +1,6 @@
 Package: Gmisc
 Version: 0.6.2.2
-Date: 2014-04-07
+Date: 2014-04-09
 Title: A few plots, tables, and misc functions
 Author: Max Gordon <max@gforge.se>
 Maintainer: Max Gordon <max@gforge.se>
